Sync portfolio website files

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="#hero">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <!--<li><a href="podcast.html">Podcast</a></li>-->
-        <li><a href="simulations/index.html">Simulations</a></li>
+        <!--li><a href="simulations/index.html">Simulations</a></li-->
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -34,7 +34,8 @@
   <section id="hero">
     <div class="hero-content">
       <h1>Hi, I'm </h1><h2>Viren  Patel</h2>
-      <p class="hero-subtitle">Product Development Engineer • Simulation Builder • Podcast Host</p>
+      <!--<p class="hero-subtitle">Product Development Engineer • Simulation Builder • Podcast Host</p>-->
+      <p class="hero-subtitle">Product Development Engineer • Simulation Builder</p>
       <p>
         With 6+ years in the <strong>semiconductor industry</strong> and a strong foundation in 
         <strong>materials science</strong>, I bridge engineering logic with creative problem-solving. 
@@ -43,9 +44,9 @@
       <p>
         I currently work in <strong>high-volume semiconductor product testing & reliability development</strong> — 
         optimizing performance with a mix of <strong>data, game theory, and root-cause thinking</strong>. 
-        Outside of work, I build <strong>interactive engineering simulations</strong> and host 
+        Outside of work, I build <strong>interactive engineering simulations</strong> </p> <!--and host 
         <em>Decoded with Viren</em>, a podcast making deep tech accessible to everyone.
-      </p>
+      </p> -->
       <p><strong>If you're building something innovative — let's collaborate.</strong></p>
       <div class="hero-actions">
         <a href="portfolio.html" class="btn-primary">About Me</a>
