--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html" class="active">Portfolio</a></li>
         <!--<li><a href="podcast.html">Podcast</a></li>-->
-        <li><a href="simulations/index.html">Simulations</a></li>
+        <!--li><a href="simulations/index.html">Simulations</a></li-->
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
