--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         </a>
         
         <a href="https://calendly.com/virenp-jobs/new-connection-linkedin" class="contact-icon calendly" target="_blank" rel="noopener noreferrer">
-          <img src="assets/images/Calendly.png" alt="Calendly">
+          <img src="assets/images/calendly.png" alt="Calendly">
           <span>Schedule a Call</span>
         </a>
       </div>
