--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       <div class="logo">
         <a href="index.html">Viren Patel</a>
       </div>
+      <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
       <ul class="nav-links">
         <li><a href="#hero">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
