--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,11 @@
       <div class="logo">
         <a href="index.html">Viren Patel</a>
       </div>
+      <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html" class="active">Portfolio</a></li>
@@ -671,7 +676,7 @@
                   <p>Tableau</p>
                 </div>
                 <div class="skill-logo">
-                  <img src="assets/images/skills/PowerBI.png" alt="Power BI">
+                  <img src="assets/images/skills/PowerBi.png" alt="Power BI">
                   <p>Power BI</p>
                 </div>
                 <div class="skill-logo">
