--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,22 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css">
+
+  <!-- Google Analytics (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMXF1FG10E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    // Your measurement ID
+    gtag('config', 'G-DMXF1FG10E', {
+      // optional advanced settings
+      // 'page_title': document.title,
+      // 'page_path': location.pathname
+    });
+  </script>
+  <!-- End Google Analytics -->
 </head>
 <body>
   <!-- Floating Particles -->
