--- a/simulations/index.html
+++ b/simulations/index.html
@@ -9,6 +9,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+
+  <!-- Google Analytics (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMXF1FG10E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    // Your measurement ID
+    gtag('config', 'G-DMXF1FG10E', {
+      // optional advanced settings
+      // 'page_title': document.title,
+      // 'page_path': location.pathname
+    });
+  </script>
+  <!-- End Google Analytics -->
+
   <style>
     * {
       margin: 0;
