--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </a>-->
 
-      <!-- Simulations Card -->
+      <!-- Simulations Card >
       <a href="simulations/index.html" class="showcase-card simulations">
         <div class="card-icon-container">
           <div class="card-icon">🔬</div>
@@ -92,7 +92,7 @@
           <p>Experience hands-on demonstrations of complex systems and algorithms. Explore physics, chemistry, mathematics, and swarm intelligence through interactive visualizations.</p>
           <span class="card-arrow">Explore Simulations</span>
         </div>
-      </a>
+      </a-->
     </div>
   </section>
 
