--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <div class="footer-content">
       <p>&copy; 2025 Viren Patel. All rights reserved.</p>
       <div class="social-links">
+        <li><a href="simulations/index.html">X</a></li>
         <a href="mailto:virenp.jobs@gmail.com">Email</a>
         <a href="https://www.linkedin.com/in/-virenpatel" target="_blank">LinkedIn</a>
         <a href="https://calendly.com/virenp-jobs/new-connection-linkedin" target="_blank">Schedule Call</a>
