--- a/simulations/sims/sim3_backup.html
+++ b/simulations/sims/sim3_backup.html
@@ -70,7 +70,6 @@
       width: 40px;
       height: 40px;
       background: rgba(20, 20, 40, 0.95);
-      backdrop-filter: blur(10px);
       border: 1px solid rgba(255, 255, 255, 0.1);
       border-left: none;
       border-radius: 0 8px 8px 0;
@@ -359,135 +358,19 @@
       color: #ff6b35;
     }
 
-    /* Mobile Expand Button */
-    .mobile-expand-btn {
-      display: none;
-      position: fixed;
-      right: 20px;
-      top: 80px;
-      width: 50px;
-      height: 50px;
-      background: rgba(74, 158, 255, 0.9);
-      border: 2px solid rgba(74, 158, 255, 1);
-      border-radius: 50%;
-      color: white;
-      font-size: 24px;
-      cursor: pointer;
-      z-index: 150;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-      transition: all 0.3s ease;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .mobile-expand-btn:active {
-      transform: scale(0.9);
-      background: rgba(74, 158, 255, 1);
-    }
-
-    /* Hide by default on desktop */
-    @media (min-width: 769px) {
-      .mobile-expand-btn {
-        display: none !important;
-      }
-    }
-
     /* Responsive Design */
     @media (max-width: 768px) {
       .simulation-sidebar {
-        width: 100%;
-        max-width: 100%;
-        height: auto;
-        max-height: 50vh;
-        overflow-y: auto;
-        border-right: none;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        top: 0;
-        left: 0;
-        z-index: 100;
-        position: fixed;
+        width: 280px;
       }
 
       .simulation-sidebar.collapsed {
-        transform: translateY(-100%);
-      }
-
-      .sidebar-toggle {
-        left: 50%;
-        top: auto;
-        bottom: 0;
-        transform: translateX(-50%);
-        border-radius: 0 0 8px 8px;
-        border-top: none;
-        border-left: 1px solid rgba(255, 255, 255, 0.1);
-        width: 60px;
-        z-index: 102;
-      }
-
-      .simulation-sidebar:not(.collapsed) .sidebar-toggle {
-        bottom: 0;
-        top: auto;
-      }
-
-      .simulation-sidebar.collapsed .sidebar-toggle {
-        bottom: auto;
-        top: 70px;
-        border-radius: 8px 8px 0 0;
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-        border-bottom: none;
-      }
-
-      /* Show mobile expand button only when sidebar is collapsed */
-      .mobile-expand-btn {
-        display: none;
-      }
-
-      .simulation-sidebar.collapsed ~ .simulation-canvas-wrapper .mobile-expand-btn {
-        display: flex;
-      }
-
-      .simulation-canvas-wrapper {
-        padding-top: 0;
-      }
-
-      .sidebar-control-btn {
-        display: none;
-      }
-
-      .sidebar-title {
-        font-size: 16px;
-        margin-bottom: 15px;
-      }
-
-      .control-label {
-        font-size: 11px;
-      }
-
-      .control-value {
-        font-size: 11px;
-      }
-
-      .control-select {
-        font-size: 11px;
-        padding: 6px;
-      }
-
-      .control-group {
-        margin-bottom: 15px;
+        transform: translateX(-280px);
       }
 
       .overlay-button {
-        padding: 10px 25px;
-        font-size: 13px;
-      }
-
-      .back-button {
-        top: 10px;
-        left: 10px;
-        right: auto;
-        padding: 8px 15px;
-        font-size: 12px;
+        padding: 12px 30px;
+        font-size: 14px;
       }
 
       .back-text {
@@ -495,100 +378,20 @@
       }
 
       .simulation-stats {
-        font-size: 9px;
-        padding: 8px 10px;
-        gap: 8px;
+        font-size: 10px;
+        padding: 10px 12px;
+        gap: 12px;
         flex-wrap: wrap;
-        top: 10px;
-      }
-
-      .stat-item {
-        gap: 5px;
-      }
-
-      .simulation-container {
-        height: calc(100vh - 70px);
       }
     }
 
     @media (max-width: 480px) {
       .simulation-sidebar {
-        padding: 15px;
+        width: 240px;
       }
 
-      .sidebar-title {
-        font-size: 14px;
-        margin-bottom: 12px;
-      }
-
-      .control-label {
-        font-size: 10px;
-      }
-
-      .control-value {
-        font-size: 10px;
-      }
-
-      .control-select {
-        font-size: 10px;
-        padding: 5px;
-      }
-
-      .control-group {
-        margin-bottom: 12px;
-      }
-
-      .control-input {
-        height: 5px;
-      }
-
-      .control-input::-webkit-slider-thumb {
-        width: 14px;
-        height: 14px;
-      }
-
-      .control-input::-moz-range-thumb {
-        width: 14px;
-        height: 14px;
-      }
-
-      .overlay-button {
-        padding: 8px 20px;
-        font-size: 12px;
-      }
-
-      .simulation-stats {
-        font-size: 8px;
-        padding: 6px 8px;
-        gap: 6px;
-      }
-
-      .back-button {
-        left: 10px;
-        right: auto;
-        padding: 6px 12px;
-        font-size: 11px;
-      }
-    }
-
-    /* Landscape mobile optimization */
-    @media (max-width: 896px) and (orientation: landscape) {
-      .simulation-sidebar {
-        max-height: 40vh;
-      }
-
-      .control-group {
-        margin-bottom: 10px;
-      }
-
-      .sidebar-title {
-        font-size: 13px;
-        margin-bottom: 10px;
-      }
-
-      .simulation-stats {
-        font-size: 8px;
-        padding: 5px 8px;
+      .simulation-sidebar.collapsed {
+        transform: translateX(-240px);
       }
     }
   </style>
@@ -732,9 +535,6 @@
     <div class="simulation-canvas-wrapper">
       <canvas id="simulationCanvas"></canvas>
 
-      <!-- Mobile Expand Button (visible only when sidebar collapsed on mobile) -->
-      <button class="mobile-expand-btn" id="mobileExpandBtn">▼</button>
-
       <!-- Sidebar Control Button -->
       <div class="sidebar-control-btn" id="sidebarControlBtn">←</div>
 
@@ -811,20 +611,6 @@
     const BASE_RADIUS = 5;
     const RESTITUTION = 1.0; // Elastic collisions (1.0 = perfectly elastic)
 
-    // Mobile detection and scaling
-    function isMobile() {
-      return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) || window.innerWidth <= 768;
-    }
-
-    function getDeviceScale() {
-      if (window.innerWidth <= 480) {
-        return 0.6; // Small phones
-      } else if (window.innerWidth <= 768) {
-        return 0.75; // Tablets and larger phones
-      }
-      return 1.0; // Desktop
-    }
-
     class Particle {
       constructor(x, y, particleType, speed) {
         this.pos = {x, y};
@@ -834,10 +620,7 @@
         // particleType is either 'A' or 'B'
         this.type = particleType;
         this.mass = 1.0;
-
-        // Scale radius based on device
-        const deviceScale = getDeviceScale();
-        this.radius = params.radiusScale * BASE_RADIUS * deviceScale;
+        this.radius = params.radiusScale * BASE_RADIUS;
 
         // Random initial velocity direction
         const angle = Math.random() * Math.PI * 2;
@@ -889,10 +672,7 @@
         ctx.arc(this.pos.x, this.pos.y, this.radius, 0, Math.PI * 2);
         ctx.fillStyle = `rgb(${this.color.r}, ${this.color.g}, ${this.color.b})`;
         ctx.fill();
-
-        // Reduce shadow blur on mobile for better performance
-        const shadowBlur = isMobile() ? 5 : 10;
-        ctx.shadowBlur = shadowBlur;
+        ctx.shadowBlur = 10;
         ctx.shadowColor = `rgba(${this.color.r}, ${this.color.g}, ${this.color.b}, 0.6)`;
       }
     }
@@ -1173,12 +953,6 @@
         const rect = this.canvas.parentElement.getBoundingClientRect();
         this.canvas.width = rect.width;
         this.canvas.height = rect.height;
-
-        // Update particle radii on resize for mobile responsiveness
-        const deviceScale = getDeviceScale();
-        for (let p of particles) {
-          p.radius = params.radiusScale * BASE_RADIUS * deviceScale;
-        }
       },
 
       createParticles() {
@@ -1247,8 +1021,7 @@
         // Draw bonds first (so they appear behind particles)
         if (params.simulateBonds && bonds.length > 0) {
           this.ctx.strokeStyle = 'rgba(255, 255, 100, 0.5)';
-          // Thinner lines on mobile
-          this.ctx.lineWidth = isMobile() ? 1 : 2;
+          this.ctx.lineWidth = 2;
           for (const bond of bonds) {
             const pi = particles[bond.i];
             const pj = particles[bond.j];
@@ -1318,19 +1091,11 @@
       setupSidebarToggle() {
         const toggle = document.getElementById('sidebarToggle');
         const controlBtn = document.getElementById('sidebarControlBtn');
-        const mobileExpandBtn = document.getElementById('mobileExpandBtn');
 
         const updateButtons = () => {
           const isCollapsed = this.sidebar.classList.contains('collapsed');
-          // Use arrows for mobile (▼ = expand down, ▲ = collapse up)
-          if (isMobile()) {
-            toggle.textContent = isCollapsed ? '▼' : '▲';
-          } else {
-            toggle.textContent = isCollapsed ? '☰' : '✕';
-          }
-          if (controlBtn) {
-            controlBtn.textContent = isCollapsed ? '→' : '←';
-          }
+          toggle.textContent = isCollapsed ? '☰' : '✕';
+          controlBtn.textContent = isCollapsed ? '→' : '←';
         };
 
         toggle.addEventListener('click', () => {
@@ -1338,26 +1103,13 @@
           updateButtons();
         });
 
-        if (controlBtn) {
-          controlBtn.addEventListener('click', () => {
-            this.sidebar.classList.toggle('collapsed');
-            updateButtons();
-          });
-        }
-
-        // Mobile expand button - expands sidebar when clicked
-        if (mobileExpandBtn) {
-          mobileExpandBtn.addEventListener('click', () => {
-            this.sidebar.classList.remove('collapsed');
-            updateButtons();
-          });
-        }
+        controlBtn.addEventListener('click', () => {
+          this.sidebar.classList.toggle('collapsed');
+          updateButtons();
+        });
 
         // Initialize button states
         updateButtons();
-
-        // Update on resize/orientation change
-        window.addEventListener('resize', updateButtons);
       },
 
       setupControls() {
@@ -1467,17 +1219,9 @@
 
       setupCanvas() {
         const canvas = document.getElementById('simulationCanvas');
-
-        // Support both click and touch events
-        const pauseSimulation = () => {
+        canvas.addEventListener('click', () => {
           Simulation.pause();
           this.showOverlay();
-        };
-
-        canvas.addEventListener('click', pauseSimulation);
-        canvas.addEventListener('touchstart', (e) => {
-          e.preventDefault(); // Prevent double-firing on mobile
-          pauseSimulation();
         });
       },
 
